--- a/views/search.html
+++ b/views/search.html
@@ -3,8 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="common/iconfont.css">
+	<script src="js/jquery.js"></script>
+	<script src="js/base.js"></script>
 </head>
 <body>
-	<h1>search</h1>
+	<div class="container">
+		<div class="search">
+				<input type="text" placeholder="搜索学校或职位" id="inputInfo">
+				<input type="button" value="搜索" id="search_2">
+		</div>
+	</div>
 </body>
 </html>
