--- a/views/index.html
+++ b/views/index.html
@@ -1,46 +1,137 @@
-<!-- 
-	<style>
-	*{
-		font-size: 0.3rem;
-	}
-		input{
-			width: 6rem;
-		}
-	</style>
-</head>
-<body>
-	<h1>index</h1>
-	<input type="text">
- -->
-	
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="common/iconfont.css">
+	<script src="js/jquery.js"></script>
+
+	<script src="js/base.js"></script>
+	<!-- <div class="box">
+			<div class="pic">   -info
+				<img src="/images/logo.png" alt="">
+			</div>
+			<div class="content-box">
+				<div class="company-name">hwl弱智集群</div>
+				<div class="detail">UI傻逼设计师[成都]</div>
+				<div class="date">2018年3月8日</div>
+			</div>
+			<div class="salary"><span>10k-20k</span></div>
+		</div> -->
+		<!-- 模版字符串，用`（反引号）标识，用${}将变量括起来。 -->
+		<!-- <div class="search">   -search
+				<input type="text" placeholder="搜索学校或职位" id="inputInfo">
+				<input type="button" value="搜索" id="search_2">
+		</div> -->
+		<style>
+
+
+</style>
+		
+	<script>
+		$(function(){
+			function getInfo(){
+				$.ajax({
+					method:"get",
+					url:"http://192.168.155.1:3000/deal/info",
+					success:function(data){
+						console.log(typeof data,data)
+						// data=JSON.parse(data);
+						$(".container").empty();
+						data.forEach(function(curr,index,arr){
+							var _box=$(` <div class="box">
+								<div class="pic">
+									<img src="${curr.companyPic}" alt="">
+								</div>
+								<div class="content-box">
+									<div class="company-name">${curr.companyName}</div>
+									<div class="detail">${curr.job}</div>
+									<div class="date">${curr.time}</div>
+								</div>
+								<div class="salary"><span>${curr.salary}</span></div>
+							</div>`);
+							$(".container").append(_box);
+						})
+					}
+				})
+			}
+
+			getInfo();
+
+		
+			// function getSearch(){
+			// 		$.ajax({
+			// 		method:"get",
+			// 		url:"http://localhost:3000/deal/info",
+			// 		success:function(data){
+			// 			console.log(typeof data,data)
+			// 			// data=JSON.parse(data);
+			// 			$(".container").empty();
+			// 			data.forEach(function(curr,index,arr){
+							
+			// 				$(".container").append(_box);
+			// 			})
+			// 		}
+			// 	})
+			// }
+			// getInfo();
+
+			$("#custom").click(getInfo);
+
+
+			$("#search").click(function(){
+				var _search=$(`<div class="search">
+				<input type="text" placeholder="搜索学校或职位" id="inputInfo">
+				<input type="button" value="搜索" id="search_2">
+		</div>`)
+				$(".container").empty().append(_search);
+			})
+
+
+			
+
+		})
+	</script>
+	
 </head>
 <body>
-	index
+	<!-- <header class="header">
+		<h1>师大就业网</h1>
+	</header> -->
+	<section class="container">
 
-		<form action="/login" method="get" id="myForm">
-				<p>
-					<input type="text" name="username" placeholder="username">
-				</p>
-				<p>
-					<input type="password" name="password" placeholder="password">
-				</p>
-				
-				<div class="submit">
-					<input type="submit" value="提&nbsp;交" >
-				</div>
-			</form>
+<style>
+	
+</style>
+		<!-- 我的 -->
+<!-- 		<div class="mine">
+			<div class="mine-top">
+				<img src="/dsa" alt="wu">
+				<div class="mine-username">wfsm</div>
+			</div>
+			<div class="mine-bottom">
+				<section class="mine-box"><i>icon</i><span>收藏</span></section>
+				<section class="mine-box"><i>icon</i><span>收藏</span></section>
+				<section class="mine-box"><i>icon</i><span>收藏</span></section>
+				<section class="mine-box"><i>icon</i><span>收藏</span></section>
+				<section class="mine-box"><i>icon</i><span>收藏</span></section>
+			
+			</div>
+		</div> -->
+
+		
+
+	</section>
+
+	<style>
+	
+
+	</style>
+	
 
 
-			<script src="https://cdn.bootcss.com/jquery/1.4.3/jquery.js"></script>
-			<script>
-				$("#myForm").submit(function(e){
-					e.preventDefault();
-				})
-			</script>
 </body>
 </html>
