--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
 * @Author: Administrator
 * @Date:   2018-03-08 19:22:04
 * @Last Modified by:   Administrator
-* @Last Modified time: 2018-03-10 16:24:35
+* @Last Modified time: 2018-03-21 12:36:50
 */
 
 /*主页info样式开始*/
@@ -18,6 +18,7 @@
 			padding: 0.3rem;
 			box-sizing: border-box;
 			border-bottom: 1px solid #ccc;
+			/*border: 1px solid red;*/
 
 		}
 		.container .box .pic{
