--- a/views/mine.html
+++ b/views/mine.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="common/iconfont.css">
 	<script src="js/jquery.js"></script>
 	<script src="js/base.js"></script>
+	<script src="js/headerFooter.js"></script>
+	
 	<script>
 		$(function(){
 			var _username=localStorage.username;
@@ -62,6 +64,14 @@
 
 		})
 	</script>
+
+	<script>
+		$(function(){
+			$("#company-user").click(function(){
+				location.href="/companyUser"
+			})
+		})
+	</script>
 </head>
 <body>
 
@@ -73,9 +83,9 @@
 			</div>
 			<div class="mine-bottom">
 				<section class="mine-box"><i>icon</i><span>收藏</span></section>
-				<section class="mine-box"><i>icon</i><span>收藏</span></section>
-				<section class="mine-box"><i>icon</i><span>收藏</span></section>
-				<section class="mine-box"><i>icon</i><span>收藏</span></section>
+				<section class="mine-box"><i>icon</i><span>修改个人信息</span></section>
+				<section class="mine-box" id="company-user"><i>icon</i><span>企业用户</span></section>
+				<section class="mine-box"><i>icon</i><span>申请为企业</span></section>
 				<section class="mine-box" id="login-quit"><i>icon</i><span>注销登录</span></section>
 				<!-- section. -->
 			</div>
