--- a/views/search.html
+++ b/views/search.html
@@ -9,13 +9,87 @@
 	<link rel="stylesheet" href="common/iconfont.css">
 	<script src="js/jquery.js"></script>
 	<script src="js/base.js"></script>
+	<script src="js/headerFooter.js"></script>
+
 </head>
 <body>
+	<style>
+		.container-bottom{
+			/*margin-top: 0.5rem;*/
+		}
+	</style>
+	<script>
+		$(function(){
+			$("#search_2").click(function(){
+				var _inputInfo=$("#inputInfo").val();
+				$.ajax({
+					url:"http://192.168.155.1:3000/deal/search",
+					method:"get",
+					data:{
+						searchInfo:_inputInfo
+					},
+					success:function(data){
+						console.log("1111")
+						console.log(data)
+						$(".container-bottom").empty();
+						if(data.status=="no"){
+							$(".container-bottom").append($(`<p>没有搜索到内容</p>`))
+						}else{
+							data.msg.forEach(function(curr,index,arr){
+								var _info=$(`<div class="box id_${curr.id}">
+				<div class="pic">  
+					<img src="${curr.companyPic}" alt="">
+				</div>
+				<div class="content-box">
+					<div class="company-name">${curr.companyName}</div>
+					<div class="detail">${curr.job}[${curr.address}]</div>
+					<div class="date">${curr.time}</div>
+				</div>
+				<div class="salary"><span>${curr.salary}</span></div>
+			</div> 
+`)
+								$(".container-bottom").append(_info)
+							})
+						}
+					}
+
+				})
+			})
+
+
+
+			$(".container-bottom").on("click",".box",function(){
+				var _id=this.className.split(" ")[1];
+				var _currIndex=_id.split("_")[1];
+				
+				location.href="/job/"+_currIndex+".html";
+			})
+
+		})
+	</script>
 	<div class="container">
 		<div class="search">
 				<input type="text" placeholder="搜索学校或职位" id="inputInfo">
 				<input type="button" value="搜索" id="search_2">
 		</div>
+		
+		<div class="container-bottom">
+			
+			
+			<!-- <div class="box">
+				<div class="pic">  
+					<img src="/images/logo.png" alt="">
+				</div>
+				<div class="content-box">
+					<div class="company-name">hwl弱智集群</div>
+					<div class="detail">UI傻逼设计师[成都]</div>
+					<div class="date">2018年3月8日</div>
+				</div>
+				<div class="salary"><span>10k-20k</span></div>
+			</div>  -->
+		</div>
+
+		
 	</div>
 </body>
 </html>
